--- a/src/css/Button.scss
+++ b/src/css/Button.scss
@@ -10,7 +10,8 @@
   transition: 0.2s;
   cursor: pointer;
   height: 3.3rem;
-  margin-top: 1rem;
+  margin-top: 2rem;
+  width: 10rem;
 }
 
 .editButton {
@@ -28,7 +29,7 @@
 
 @media only screen and (max-width: 1109px) {
   .button {
-    width: 102%;
-    padding: 1rem;
+    width: 100%;
+    margin-left: 1rem;
   }
 }
